add models & api interfaces for strategy and strategyActivity
