# srv/swagger_server/controllers/default_controller.py
@@ -5,6 +5,10 @@ from swagger_server.models.alert_request import AlertRequest  # noqa: E501
 from swagger_server.models.alert_response import AlertResponse  # noqa: E501
 from swagger_server.models.monitor_request import MonitorRequest  # noqa: E501
 from swagger_server.models.monitor_response import MonitorResponse  # noqa: E501
+from swagger_server.models.strategy_activity_request import StrategyActivityRequest  # noqa: E501
+from swagger_server.models.strategy_activity_response import StrategyActivityResponse  # noqa: E501
+from swagger_server.models.strategy_request import StrategyRequest  # noqa: E501
+from swagger_server.models.strategy_response import StrategyResponse  # noqa: E501
 from swagger_server.models.user_request import UserRequest  # noqa: E501
 from swagger_server.models.user_response import UserResponse  # noqa: E501
 from swagger_server import util
@@ -62,6 +66,32 @@ def get_ping():  # noqa: E501
 
 
     :rtype: None
+    """
+    return 'do some magic!'
+
+
+def get_strategy_activity_strategy_id(strategy_id):  # noqa: E501
+    """Your GET endpoint
+
+    Get all activities of the specific strategy. # noqa: E501
+
+    :param strategy_id: strategy id
+    :type strategy_id: int
+
+    :rtype: List[StrategyActivityResponse]
+    """
+    return 'do some magic!'
+
+
+def get_strategy_owner_id(owner_id):  # noqa: E501
+    """Your GET endpoint
+
+    Get all strategies of a specific user. # noqa: E501
+
+    :param owner_id: owner id
+    :type owner_id: int
+
+    :rtype: List[StrategyResponse]
     """
     return 'do some magic!'
 
@@ -154,14 +184,33 @@ def get_users_user_id_monitors_monitor_id(user_id, monitor_id):  # noqa: E501
     return 'do some magic!'
 
 
-def patch_strategy():  # noqa: E501
+def patch_strategy(body=None):  # noqa: E501
     """patch_strategy
 
-     # noqa: E501
+    Update an exisiting strategy. # noqa: E501
 
+    :param body: 
+    :type body: dict | bytes
 
     :rtype: None
     """
+    if connexion.request.is_json:
+        body = StrategyRequest.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
+
+
+def patch_strategy_activity(body=None):  # noqa: E501
+    """patch_strategy_activity
+
+    Update an existing activity for streategy. # noqa: E501
+
+    :param body: 
+    :type body: dict | bytes
+
+    :rtype: None
+    """
+    if connexion.request.is_json:
+        body = StrategyActivityRequest.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
@@ -225,14 +274,33 @@ def post_login():  # noqa: E501
     return 'do some magic!'
 
 
-def post_strategy():  # noqa: E501
+def post_strategy(body=None):  # noqa: E501
     """post_strategy
 
-     # noqa: E501
+    Create a new strategy. # noqa: E501
 
+    :param body: 
+    :type body: dict | bytes
 
     :rtype: None
     """
+    if connexion.request.is_json:
+        body = StrategyRequest.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
+
+
+def post_strategy_activity(body=None):  # noqa: E501
+    """post_strategy_activity
+
+    Create a new activity for strategy. # noqa: E501
+
+    :param body: 
+    :type body: dict | bytes
+
+    :rtype: None
+    """
+    if connexion.request.is_json:
+        body = StrategyActivityRequest.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
@@ -283,3 +351,8 @@ def post_users_user_id_monitor(user_id, body=None):  # noqa: E501
     if connexion.request.is_json:
         body = MonitorRequest.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
+
+from .alert_controller import AlertController
+from .login_controller import LoginController
+from .ping_controller import PingController
+from .user_controller import UserController
