# srv/swagger_server/models/__init__.py
@@ -7,5 +7,9 @@ from swagger_server.models.alert_request import AlertRequest
 from swagger_server.models.alert_response import AlertResponse
 from swagger_server.models.monitor_request import MonitorRequest
 from swagger_server.models.monitor_response import MonitorResponse
+from swagger_server.models.strategy_activity_request import StrategyActivityRequest
+from swagger_server.models.strategy_activity_response import StrategyActivityResponse
+from swagger_server.models.strategy_request import StrategyRequest
+from swagger_server.models.strategy_response import StrategyResponse
 from swagger_server.models.user_request import UserRequest
 from swagger_server.models.user_response import UserResponse
